--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@
 #*.jpg   binary
 #*.png   binary
 #*.gif   binary
+*.sb3    binary     # Exported Scratch project
 
 ###############################################################################
 # diff behavior for common document formats
